# merkleAuthenticate

./: .gitignore  .gitmodules  readme.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: documents.rs  mod.rs
backend/src/merkle/: mod.rs
backend/src/utils/: extractor.rs
eth-backend/: index.js  package-lock.json  package.json  pnpm-lock.yaml
eth-backend/handlers/: anchor.js
frontend/: package.json  pnpm-lock.yaml
frontend/abis/: verify.json
frontend/app/: layout.tsx  page.tsx
frontend/app/generate-proof/: page.tsx
frontend/app/verify/: page.tsx
frontend/components/: navigation.tsx  proof-generator.tsx  upload-form.tsx  verify-form.tsx
frontend/config/: addresses.ts
frontend/hooks/: Providers.tsx  useAnchorDocument.ts
frontend/lib/: api.ts
mt/: Cargo.toml
mt/src/: main.rs
tree/: .env  Cargo.toml
tree/src/: config.rs  core.rs  main.rs
tree/src/coreFunctions/: mod.rs
tree/src/db/: mongo.rs
tree/src/handlers/: documents.rs  mod.rs  proof.rs  verify.rs
tree/src/merkle/: mod.rs
tree/src/utils/: extractor.rs
vverify/broadcast/deployVerify.s.sol/84532/: run-1747944514.json  run-1747948116.json  run-1747953066.json  run-latest.json
vverify/script/: deployVerify.s.sol
vverify/src/: Verify.sol
vverify/test/: verify.t.sol
