[package]
name = "tree"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web       = "4"
actix-multipart = "0.6"
tokio           = { version = "1", features = ["macros", "rt-multi-thread"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
uuid            = { version = "1", features = ["v4"] }
sha2            = "0.10"
sqlx            = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "macros"] }
dotenvy         = "0.15"
# pdf extraction helper (pure‑Rust).  Pick another crate if you prefer.
lopdf           = "0.32"
