[package]
name = "tree"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web       = "4"
actix-multipart = "0.6"
tokio           = { version = "1", features = ["macros", "rt-multi-thread"] }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
uuid            = { version = "1", features = ["v4"] }
sha2            = "0.10"
mongodb         = { version = "2", default-features = false, features = ["tokio-runtime"] }
bson            = "2"               # for ObjectId helpers
dotenvy         = "0.15"
lopdf           = "0.32"            # (PDF text extractor)
anyhow          = "1"
futures-util = "0.3"        # StreamExt
bytes        = "1"          # already pulled by Actix but listed for clarity
encoding_rs  = "0.8"
pdf-extract = "0.8" 
tempfile    = "3"


